修改查询接口的返回结果
