# src/main/java/org/multilinguals/enterprise/cmrs/interfaces/query/RoleQueryController.java
@@ -1,7 +1,6 @@
 package org.multilinguals.enterprise.cmrs.interfaces.query;
 
 import org.multilinguals.enterprise.cmrs.infrastructure.dto.CMRSPage;
-import org.multilinguals.enterprise.cmrs.infrastructure.dto.QueryResponse;
 import org.multilinguals.enterprise.cmrs.query.rbac.RoleDetailsView;
 import org.multilinguals.enterprise.cmrs.query.rbac.RoleDetailsViewRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -27,19 +26,18 @@ public class RoleQueryController {
 
     @GetMapping("/get-role-list")
     @PreAuthorize("hasAnyRole('ROLE_USER_ADMIN','ROLE_SUPER_ADMIN')")
-    public QueryResponse adminGetRoleList(@RequestParam(defaultValue = "0", required = false) String page, @RequestParam(defaultValue = "20", required = false) String size) {
+    public CMRSPage<RoleDetailsView> adminGetRoleList(@RequestParam(defaultValue = "0", required = false) String page, @RequestParam(defaultValue = "20", required = false) String size) {
         Sort sort = new Sort(Sort.Direction.DESC, "name");
         Page<RoleDetailsView> roleDetailsViewPage = this.roleDetailsViewRepository.findAll(PageRequest.of(Integer.valueOf(page), Integer.valueOf(size), sort));
 
-        return new QueryResponse<>(new CMRSPage<>(roleDetailsViewPage));
+        return new CMRSPage<>(roleDetailsViewPage);
     }
 
     @GetMapping("/get-all-roles")
     @PreAuthorize("hasAnyRole('ROLE_USER_ADMIN','ROLE_SUPER_ADMIN')")
-    public QueryResponse<List<RoleDetailsView>> adminGetRoleList() {
+    public List<RoleDetailsView> adminGetRoleList() {
         Sort sort = new Sort(Sort.Direction.DESC, "name");
-        List<RoleDetailsView> roleDetailsViewPage = this.roleDetailsViewRepository.findAll(sort);
 
-        return new QueryResponse<>(roleDetailsViewPage);
+        return this.roleDetailsViewRepository.findAll(sort);
     }
 }
